--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 	<project name="hello world project" default="info">
 	<target name="info">
-	<echo> Hello Workd- Welcome to Apache Ant!</echo>
+	<echo> Hello World- Welcome to Apache Ant!</echo>
 	</target>
 	<target name="hello">
 	<echo> Hello From Second Pipeline stage</echo>
